WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219802
REGRESSION (
r270677
-
r270693
): Catalina Perf tests failing
https://bugs.webkit.org/show_bug.cgi?id=219802
Summary
REGRESSION (r270677-r270693): Catalina Perf tests failing
Ryan Haddad
Reported
2020-12-11 13:19:37 PST
Catalina Perf tests are failing, I assume it is because of this unexpected logging: Running Animation/balls.html (1 of 203) error: Animation/balls.html 2020-12-11 12:21:02.034 com.apple.WebKit.WebContent.Development[84193:9382751] IORegisterForSystemPower failed 2020-12-11 12:21:02.034 com.apple.WebKit.WebContent.Development[84193:9382751] IORegisterForSystemPower failed
https://build.webkit.org/builders/Apple-Catalina-Release-WK2-Perf/builds/2430
Attachments
Patch
(2.98 KB, patch)
2020-12-14 08:13 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2020-12-11 13:19:46 PST
Regression range:
https://trac.webkit.org/log/webkit/?action=stop_on_copy&mode=stop_on_copy&rev=270693&stop_rev=270677&limit=100&verbose=on
Radar WebKit Bug Importer
Comment 2
2020-12-11 13:19:58 PST
<
rdar://problem/72236108
>
Ryan Haddad
Comment 3
2020-12-11 15:33:08 PST
Per Arne and Brent, could this logging be related to any of the sandbox changes you have made today?
https://trac.webkit.org/changeset/270682/webkit
https://trac.webkit.org/changeset/270691/webkit
https://trac.webkit.org/changeset/270692/webkit
Per Arne Vollan
Comment 4
2020-12-14 08:13:36 PST
Created
attachment 416160
[details]
Patch
Brent Fulgham
Comment 5
2020-12-14 16:31:28 PST
Comment on
attachment 416160
[details]
Patch r=me
Per Arne Vollan
Comment 6
2020-12-14 16:36:27 PST
Comment on
attachment 416160
[details]
Patch Thanks for reviewing!
EWS
Comment 7
2020-12-14 17:01:27 PST
Committed
r270811
: <
https://trac.webkit.org/changeset/270811
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416160
[details]
.
Per Arne Vollan
Comment 8
2021-01-22 16:05:11 PST
***
Bug 220799
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug