REGRESSION (r270677-r270693): Catalina Perf tests failing https://bugs.webkit.org/show_bug.cgi?id=219802 <rdar://problem/72236108>

Reviewed by Brent Fulgham.

Create extension for RootDomainUserClient also for Intel Macs, and move logging rules outside of
HAVE(SANDBOX_MESSAGE_FILTERING) section in sandbox.

* UIProcess/WebPageProxy.cpp:
(WebKit::mediaRelatedIOKitClasses):
* WebProcess/com.apple.WebProcess.sb.in:


Canonical link: https://commits.webkit.org/232465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270811 268f45cc-cd09-0410-ab3c-d52691b4dbfc